# M5-Stamp-S3BAT

./: CMakeCache.txt  CMakeLists.txt  app-flash_args  cmake_install.cmake  config.env  flash_project_args  flasher_args.json  kconfigs.in  kconfigs_projbuild.in  ldgen_libraries  ldgen_libraries.in  project_description.json  sdkconfig  sdkconfig.old
bootloader-prefix/tmp/: bootloader-cfgcmd.txt  bootloader-mkdirs.cmake
components/m5_stamp_timer_power2/: CMakeLists.txt  Kconfig  LICENSE  README.md  idf_component.yml  m5_stamp_timer_power2.cpp
components/m5_stamp_timer_power2/examples/: stp2_advanced_example.c  stp2_basic_example.c
components/m5_stamp_timer_power2/include/: m5_stamp_timer_power2.h
config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
esp-idf/: cmake_install.cmake
esp-idf/app_trace/: cmake_install.cmake
esp-idf/app_update/: cmake_install.cmake
esp-idf/bootloader/: cmake_install.cmake
esp-idf/bootloader_support/: cmake_install.cmake
esp-idf/bt/: cmake_install.cmake
esp-idf/cmock/: cmake_install.cmake
esp-idf/console/: cmake_install.cmake
esp-idf/cxx/: cmake_install.cmake
esp-idf/driver/: cmake_install.cmake
esp-idf/efuse/: cmake_install.cmake
esp-idf/esp-tls/: cmake_install.cmake
esp-idf/esp_adc/: cmake_install.cmake
esp-idf/esp_app_format/: cmake_install.cmake
esp-idf/esp_bootloader_format/: cmake_install.cmake
esp-idf/esp_coex/: cmake_install.cmake
gdbinit/: gdbinit  symbols
main/: CMakeLists.txt  i2c_bus_tools.cpp  i2c_bus_tools.h  idf_component.yml  main.cpp  stamp_case.cpp  stamp_case.h
(+104 files in other folders)
